--- a/01 - InSecure-Box/package.json
+++ b/01 - InSecure-Box/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "cuid": "^1.3.8",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4"
