--- a/02-secure-box-normal/package.json
+++ b/02-secure-box-normal/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "s2-secure-box-normal",
+  "name": "02-secure-box-normal",
   "version": "1.0.0",
-  "description": "Cryptographix Workshop on Secure Web Applications - Stage 2 - Standard-Box",
+  "description": "Cryptographix Workshop on Secure Web Applications - Stage 2 - Secure-Box Normal",
   "main": "build/server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
